# miniflow

./: .gitignore  LICENSE  README.md  TODO.md  docker-compose.override.yml  docker-compose.yml  example.py  pyproject.toml
data_processing_framework/: __main__.py  common.py  job.py  schedule.py  scheduler.py
data_processing_framework/jobs/: __init__.py  dummy.py  ingest_data.py
docker/: .Dockerfile  entrypoint.sh  rq_scheduler.Dockerfile  rq_worker.Dockerfile
helpers/: db.py  scheduling.py
jobs/: __init__.py  __main__.py  common.py  dummy.py  ingest_data.py  jobs.py  say_hi_job.py
miniflow/: __main__.py  common.py  job.py
miniflow/jobs/: job_1.py  job_2.py  job_3.py
src/miniflow/: __init__.py  jobs.py
ui/: __main__.py
