[project]
name = "data-processing-framework"
version = "0.1.0"
description = "Data Processing Framework"
readme = "README.md"
authors = [{ name = "Daniel Kofler", email = "dkofler@outlook.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "rq>=2.3.3",
    "rq-scheduler>=0.14.0",
    "sqlalchemy>=2.0.40",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F403", "S101"]
select = ["ARG", "C4", "E", "F", "RUF", "S", "SIM", "TC", "W"]
