[project]
name = "miniflow"
version = "0.1.0"
description = "Minimal job scheduling and execution framework based on Python RQ."
readme = "README.md"
authors = [{ name = "Daniel Kofler", email = "dkofler@outlook.com" }]
license = { text = "BSD" }
requires-python = ">=3.12"
dependencies = ["rq>=2.3.3", "rq-dashboard>=0.8.2.2"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F403", "S101"]
select = ["ARG", "C4", "E", "F", "RUF", "S", "SIM", "TC", "W"]
